--- a/Maui_app/MainPage.xaml
+++ b/Maui_app/MainPage.xaml
@@ -1,24 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:Maui_app="clr-namespace:Maui_app"
              x:Class="Maui_app.MainPage">
     
     <VerticalStackLayout Margin="30,60,30,30">
         <Label Text="Notes"
                HorizontalOptions="Center"
-               FontAttributes="Bold" />
+               FontAttributes="Bold"
+               TextColor="{x:Static Member=Maui_app:SharedResources.FontColor}"/>
         <Editor x:Name="editor"
                 Placeholder="Enter your note"
-                HeightRequest="100" />
+                HeightRequest="{OnPlatform 100, Android=500, iOS=500}"
+                TextColor="{x:Static Member=Maui_app:SharedResources.FontColor}"/>
         <Grid ColumnDefinitions="Auto, 30, Auto">
             <Button Grid.Column="0"
                     Text="Save" 
                     WidthRequest="100"
-                    Clicked="OnSaveButtonClicked" />
+                    Clicked="OnSaveButtonClicked"
+                    TextColor="{x:Static Member=Maui_app:SharedResources.FontColor}"
+                    BackgroundColor="{x:Static Member=Maui_app:SharedResources.BackgroundColor}"/>
             <Button Grid.Column="2"
                     Text="Delete" 
                     WidthRequest="100"
-                    Clicked="OnDeleteButtonClicked" />
+                    Clicked="OnDeleteButtonClicked"
+                    TextColor="{x:Static Member=Maui_app:SharedResources.FontColor}"
+                    BackgroundColor="{x:Static Member=Maui_app:SharedResources.BackgroundColor}"/>
         </Grid>
     </VerticalStackLayout>
 
