--- a/TipCalculator/StandardTipPage.xaml
+++ b/TipCalculator/StandardTipPage.xaml
@@ -9,6 +9,15 @@
             <Color x:Key="bgColor">#C0C0C0</Color>
             <Color x:Key="fgColor">#0000AD</Color>
             <x:Double x:Key="fontSize">22</x:Double>
+
+            <Style x:Key="baseLabelStyle" TargetType="Label">
+                <Setter Property="FontSize" Value="{StaticResource fontSize}" />
+            </Style>
+
+            <Style x:Key="infoLabelStyle" TargetType="Label" BasedOn="{StaticResource baseLabelStyle}">
+                <Setter Property="FontSize" Value="{StaticResource fontSize}" />
+            </Style>
+
         </ResourceDictionary>
     </ContentPage.Resources>
 
@@ -18,14 +27,14 @@
 
     
         <!-- Left column = static labels -->
-        <Label x:Name="billLabel"  Text="Bill"  TextColor="{DynamicResource fgColor}" FontSize="{StaticResource fontSize}" FontAttributes="Bold" Grid.Row="0" Grid.Column="0" />
-        <Label x:Name="tipLabel"   Text="Tip"   TextColor="{DynamicResource fgColor}" FontSize="{StaticResource fontSize}" FontAttributes="Bold" Grid.Row="1" Grid.Column="0" />
-        <Label x:Name="totalLabel" Text="Total" TextColor="{DynamicResource fgColor}" FontSize="{StaticResource fontSize}" FontAttributes="Bold" Grid.Row="2" Grid.Column="0" />
+        <Label x:Name="billLabel"  Text="Bill"  TextColor="{DynamicResource fgColor}" Style="{StaticResource infoLabelStyle}" Grid.Row="0" Grid.Column="0" />
+        <Label x:Name="tipLabel"   Text="Tip"   TextColor="{DynamicResource fgColor}" Style="{StaticResource infoLabelStyle}" Grid.Row="1" Grid.Column="0" />
+        <Label x:Name="totalLabel" Text="Total" TextColor="{DynamicResource fgColor}" Style="{StaticResource infoLabelStyle}" Grid.Row="2" Grid.Column="0" />
 
         <!-- Right column = user input and calculated-value output -->
         <Entry x:Name="billInput"   Placeholder="Enter Amount" Keyboard="Numeric" TextColor="Gray" Grid.Row="0" Grid.Column="1" />
-        <Label x:Name="tipOutput"   Text="0.00" TextColor="{DynamicResource fgColor}" FontSize="{StaticResource fontSize}"   Grid.Row="1" Grid.Column="1" />
-        <Label x:Name="totalOutput" Text="0.00" TextColor="{DynamicResource fgColor}" FontSize="{StaticResource fontSize}"   Grid.Row="2" Grid.Column="1" />
+        <Label x:Name="tipOutput"   Text="0.00" TextColor="{DynamicResource fgColor}" Style="{StaticResource baseLabelStyle}"   Grid.Row="1" Grid.Column="1" />
+        <Label x:Name="totalOutput" Text="0.00" TextColor="{DynamicResource fgColor}" Style="{StaticResource baseLabelStyle}"   Grid.Row="2" Grid.Column="1" />
 
         <!-- Navigate to advanced-view page -->
         <Button Text="Use Custom Calculator" Clicked="GotoCustom" TextColor="White" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" />
