--- a/Astronomy/AppShell.xaml
+++ b/Astronomy/AppShell.xaml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Shell
-    x:Class="Alignment.AppShell"
+    x:Class="Astronomy.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:Alignment"
-    Shell.FlyoutBehavior="Disabled"
-    Title="Alignment">
+    xmlns:local="clr-namespace:Astronomy.Pages">
 
     <Shell.FlyoutHeader>
         <Grid HeightRequest="100" BackgroundColor="DarkSlateBlue">
@@ -13,11 +11,9 @@
         </Grid>
     </Shell.FlyoutHeader>
 
-    <FlyoutItem Title="Moon Phase" FlyoutIcon="moon.png">
+    <FlyoutItem Title="Moon Phase" Icon="moon.png">
         <ShellContent
-            Title="Home"
-            ContentTemplate="{DataTemplate local:MainPage}"
-            Route="MainPage" />
+            ContentTemplate="{DataTemplate local:MoonPhasePage}"/>
     </FlyoutItem>
 
     <FlyoutItem Title="Sunrise" Icon="sun.png">
