--- a/Astronomy/AppShell.xaml
+++ b/Astronomy/AppShell.xaml
@@ -7,23 +7,22 @@
 
     <Shell.FlyoutHeader>
         <Grid HeightRequest="100" BackgroundColor="DarkSlateBlue">
-            <Image Source="moon.png" />
+            <Image Source="moon.png"/>
         </Grid>
     </Shell.FlyoutHeader>
 
-    <FlyoutItem Title="Moon Phase" Icon="moon.png">
-        <ShellContent
-            ContentTemplate="{DataTemplate local:MoonPhasePage}"/>
-    </FlyoutItem>
-
-    <FlyoutItem Title="Sunrise" Icon="sun.png">
-        <ShellContent
-        ContentTemplate="{DataTemplate local:SunrisePage}"/>
+    <FlyoutItem Title="Astronomy" Icon="moon.png">
+        <ShellContent Title="Moon" Icon="moon.png"
+                ContentTemplate="{DataTemplate local:MoonPhasePage}" />
+        <ShellContent Title="Daylight" Icon="sun.png"
+            ContentTemplate="{DataTemplate local:SunrisePage}" />
+        <ShellContent Title="Bodies" Icon="comet.png"
+            ContentTemplate="{DataTemplate local:AstronomicalBodiesPage}"/>
     </FlyoutItem>
 
     <FlyoutItem Title="About" Icon="question.png">
         <ShellContent
-        ContentTemplate="{DataTemplate local:AboutPage}"/>
+            ContentTemplate="{DataTemplate local:AboutPage}"/>
     </FlyoutItem>
 
 </Shell>
